# VBI-Octopus-2

./: .gitignore  Cargo.toml  customSpec.json  customSpecRaw.json  node-key  raw.json
chains/testnet/: customSpec.json  raw.json
js-test/: index.js  package.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  example_rpc.rs  lib.rs  main.rs  rpc.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs  weights.rs
pallets/tightly-coupling/: Cargo.toml
pallets/tightly-coupling/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: run.sh
scripts/key/: aura1  aura2  gran1  gran2  run.sh
